# fastapi-sync-vs-async

./: README.md  locustfile.py  main.py  pyproject.toml  results.txt  sleepy.py
